2013-12-05  Eric Wolf  <coyocanid@gamil.com>

	* VERSION 0.1014
	* Changes to the javascript widgets. Added the ability for yote javascript to look for control_table and yote_panel classed items and produce a control table or yote panel in that control. A yote panel is an editable panel, but has the property that it can be in an edit mode for root but display mode otherwise.

2013-11-27  Eric Wolf  <coyocanid@gmail.com>
	* VERSION 0.1012
	* removed Yote::Util::Counter. It doesn't fit in with the new Yote, which needs less classes for more bang.
	
2013-11-27  Eric Wolf  <coyocanid@gmail.com>
	* VERSION 0.1012
	* $.yote.util.init_ui method has been created. This will cause divs to become control tables, with attributes that mirror control table init arguments. These arguments can take functions ( for example columns="!colfunction" ) or json objecs ( column_names="['Foo','Bar','Baz']" ). Should a column be a string proceded with a star, it will become editable ( like columns=['foo','*bar','baz'] ).

	
2013-11-20  Eric Wolf  <coyocanid@gmail.com>

	* VESION 0.1011
	* Object creation off of Yote::YoteRoot with the methods new_user_obj, new_obj and new_root_obj. It is hard to overstate how important the subtle changes in this update are, on the web facing side. The control_table widget is now much more powerful. Items can be created with it with arbitrary fields, provided permissions are ahdered to. This means, using entirely client side programming, objects can be defined and managed.

2013-09-19  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.1009
	* count now can take arguments to return a count for searches too.
	* tests for different IO modules now share a common test routine.