@@ -17,7 +17,7 @@ use Yote::IO::TestUtil;
 use Data::Dumper;
 use File::Temp qw/ :mktemp /;
 use File::Spec::Functions qw( catdir updir );
-use Test::More tests => 494;
+use Test::More tests => 495;
 use Test::Pod;
 
 
@@ -68,16 +68,16 @@ sub test_suite {
 #                                      #
     Yote::YoteRoot->fetch_root();
     my( $o_count ) = query_line( $db, "SELECT count(*) FROM objects" );
-    is( $o_count, 13, "number of objects before save root, since root is initiated automatically" );
+    is( $o_count, 14, "number of objects before save root, since root is initiated automatically" );
     my $root = Yote::ObjProvider::fetch( Yote::ObjProvider::first_id() );
     is( ref( $root ), 'Yote::YoteRoot', 'correct root class type' );
     ok( $root->{ID} == 1, "Root has id of 1" );
     my $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 13, "highest id in database is 13" );
+    is( $max_id, 14, "highest id in database is 13" );
     ( $o_count ) = query_line( $db, "SELECT count(*) FROM objects" );
-    is( $o_count, 13, "number of objects after save root" ); # which also makes an account root automiatcially and has apps,emails,accounts,app_alias and library paths underneath it as well as cron with a cron entry
+    is( $o_count, 14, "number of objects after save root" ); # which also makes an account root automiatcially and has apps,emails,accounts,app_alias and library paths underneath it as well as cron with a cron entry
     my( $f_count ) = query_line( $db, "SELECT count(*) FROM field" );
-    is( $f_count, 10, "number of fields after yoteroot is called" );
+    is( $f_count, 11, "number of fields after yoteroot is called" );
 
 #
 # Save key value fields for simple scalars, arrays and hashes.
@@ -86,36 +86,36 @@ sub test_suite {
     is( $root->set_first( "FRIST" ), "FRIST", "set_ returns value" ); # 1
     $root->get_default_array( ["DEFAULT ARRAY"] );          # 2
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 14, "highest id in database 14" );
+    is( $max_id, 15, "highest id in database 15" );
     $root->set_reallybig( "BIG" x 1.000);                    # 0
     $root->set_gross( 12 * 12 );                            # 1
     $root->set_array( ["THIS IS AN ARRAY"] );               # 2
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 15, "highest id in database 15" );
+    is( $max_id, 16, "highest id in database 16" );
     $root->get_default_hash( { "DEFKEY" => "DEFVALUE" } );  # 2
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 16, "highest id in database 16" );
+    is( $max_id, 17, "highest id in database 17" );
     my $newo = new Yote::Obj();
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 17, "highest id in database 17" );
+    is( $max_id, 18, "highest id in database 18" );
     my $somehash = {"preArray" => $newo};
     $newo->set_somehash( $somehash ); #testing for recursion
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 18, "highest id in database 18" );
+    is( $max_id, 19, "highest id in database 19" );
     $root->get_cool_hash( { "llamapre" => ["prethis",$newo,$somehash] } );  # 2 (7 after stow all)
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 20, "highest id in database 20" );
+    is( $max_id, 21, "highest id in database 21" );
     $root->set_hash( { "KEY" => "VALUE" } );                # 2
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 21, "highest id in database 21" );
+    is( $max_id, 22, "highest id in database 22" );
     Yote::ObjProvider::stow_all();
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 21, "highest id in database still 21" );
+    is( $max_id, 22, "highest id in database still 22" );
 
     # added default_hash, { 'llama', ["this", new yote obj, "Array, and a new yote object bringing the object count to 7 + 6 = 13
     # the new max id should be 7 (root) + defalt_array 1,  array 1, default_hash 1, newobj 1, somehash 1, coolahash 1, arryincoolhash 1, hash 1
     $max_id = $Yote::ObjProvider::DATASTORE->max_id();
-    is( $max_id, 21, "highest id in database is 21 after adding more objects" );
+    is( $max_id, 22, "highest id in database is 22 after adding more objects" );
 
     Yote::ObjProvider::stow_all();
 
@@ -134,10 +134,10 @@ sub test_suite {
 # 1 from alias_apps
     my $db_rows = $db->selectall_arrayref("SELECT * FROM field");
 
-    BAIL_OUT("error saving after stow all") unless is( scalar(@$db_rows), 38, "Number of db rows saved to database with stow all" );
+    BAIL_OUT("error saving after stow all") unless is( scalar(@$db_rows), 39, "Number of db rows saved to database with stow all" );
 
     $db_rows = $db->selectall_arrayref("SELECT * FROM objects WHERE recycled=0");
-    is( scalar(@$db_rows), 22, "Number of db rows saved to database not recycled" ); 
+    is( scalar(@$db_rows), 23, "Number of db rows saved to database not recycled" ); 
     $db_rows = $db->selectall_arrayref("SELECT * FROM objects WHERE recycled=1");
     is( scalar(@$db_rows), 4, "Number of db rows recycled" ); 
 
